apps/vaultwarden/deployment-default-vaultwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vaultwarden
    environment: prod
  name: vaultwarden
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: vaultwarden
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: vaultwarden
        environment: prod
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - arm64
                - amd64
      automountServiceAccountToken: true
      containers:
      - env:
        - name: DOMAIN
          value: https://bw.brmartin.co.uk
        - name: SIGNUPS_ALLOWED
          value: 'false'
        - name: SMTP_HOST
          value: mail.brmartin.co.uk
        - name: SMTP_FROM
          value: services@brmartin.co.uk
        - name: SMTP_PORT
          value: '587'
        - name: SMTP_SECURITY
          value: starttls
        - name: SMTP_USERNAME
          valueFrom:
            secretKeyRef:
              key: SMTP_USERNAME
              name: vaultwarden-secrets
              optional: false
        - name: ROCKET_PORT
          value: '80'
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: DATABASE_URL
              name: vaultwarden-secrets
              optional: false
        - name: SMTP_PASSWORD
          valueFrom:
            secretKeyRef:
              key: SMTP_PASSWORD
              name: vaultwarden-secrets
              optional: false
        - name: ADMIN_TOKEN
          valueFrom:
            secretKeyRef:
              key: ADMIN_TOKEN
              name: vaultwarden-secrets
              optional: false
        image: vaultwarden/server
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /alive
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: vaultwarden
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /alive
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 25m
            memory: 32Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          mountPropagation: HostToContainer
          name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: vaultwarden-data-sw
