apps/vaultwarden/service-default-vaultwarden.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vaultwarden
    environment: prod
  name: vaultwarden
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: vaultwarden
  sessionAffinity: None
  type: ClusterIP
